# internal-api-py

./: README.md
docs/: tree.md
internal-api-fp/: CLAUDE.md  pyproject.toml
internal-api-fp/src/internal_api_fp/: __init__.py  bootstrap.py  main.py
internal-api-fp/src/internal_api_fp/adapters/inbound/: web.py
internal-api-fp/src/internal_api_fp/adapters/outbound/: in_memory_orders.py  stdout_events.py
internal-api-fp/src/internal_api_fp/core/domain/model/: errors.py
internal-api-fp/src/internal_api_fp/core/domain/service/: validation.py
internal-api-fp/src/internal_api_fp/core/ports/inbound/: place_order.py
internal-api-fp/src/internal_api_fp/core/ports/outbound/: events.py  orders.py
internal-api-fp/src/internal_api_fp/core/usecase/: place_order.py
internal-api-oop/: README.md  pyproject.toml
internal-api-oop/src/internal_api/: asgi.py  bootstrap.py  main.py
internal-api-oop/src/internal_api/adapters/inbound/web/: fastapi_app.py
internal-api-oop/src/internal_api/adapters/outbound/: in_memory_idempotency.py  in_memory_orders.py  stdout_events.py
internal-api-oop/src/internal_api/core/domain/model/: order.py
internal-api-oop/src/internal_api/core/domain/service/: get_order_service.py  list_orders_service.py  place_order_service.py
internal-api-oop/src/internal_api_oop/: asgi.py  bootstrap.py  main.py
internal-api-oop/src/internal_api_oop/adapters/inbound/: cli.py
internal-api-oop/src/internal_api_oop/adapters/outbound/: dummy_payment.py  in_memory_idempotency.py  in_memory_inventory.py  in_memory_orders.py  stdout_events.py
(+32 files in other folders)
