[project]
name = "internal-api-oop"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "behike56", email = "fxy.x@lambda-publishing.com" }
]
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.129.2",
    "pydantic>=2.12.5",
    "returns>=0.26.0",
]

[project.scripts]
internal-api = "internal_api_oop:main"

[build-system]
requires = ["uv_build>=0.9.17,<0.10.0"]
build-backend = "uv_build"
